syntax = "proto3";

import "aelf/options.proto";
import "aelf/core.proto";
import "acs13.proto";
//import "acs1.proto";
import "acs12.proto";

option csharp_namespace = "EBridge.Contracts.StringAggregator";

// StringValue -> StringValue
service StringAggregatorContract {
  option (aelf.csharp_state) = "EBridge.Contracts.StringAggregator.StringAggregatorContractState";
  option (aelf.base) = "acs13.proto";
//  option (aelf.base) = "acs1.proto";
  option (aelf.base) = "acs12.proto";
}

message AggregateDataReceived {
  option (aelf.is_event) = true;
  Results results = 1;
  string final_result = 2;
}

message Results {
  repeated string value = 1;
}